dynamix/force-app/main/default/objects/Payment__c/fields/Apartment_No__c.field-meta.xml
<CustomField>
    <fullName>Apartment_No__c</fullName>
    <formula>Booking__r.Related_Suggested_Property__r.Unit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apartment No</label>
    <type>Text</type>
</CustomField>