dynamix/force-app/main/default/objects/Payment__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <label>Bank Name Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>