dynamix/force-app/main/default/objects/Payment__c/fields/Bank_value_date__c.field-meta.xml
<CustomField>
    <fullName>Bank_value_date__c</fullName>
    <label>Bank value date</label>
    <type>Date</type>
</CustomField>