dynamix/force-app/main/default/objects/Payment__c/fields/BankName__c.field-meta.xml
<CustomField>
    <fullName>BankName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Name</label>
    <referenceTo>Bank__c</referenceTo>
    <relationshipLabel>Payment</relationshipLabel>
    <relationshipName>Payment</relationshipName>
    <type>Lookup</type>
</CustomField>