dynamix/force-app/main/default/objects/Payment__c/fields/Booking_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Booking_Owner_Name__c</fullName>
    <formula>$User.FirstName +&apos; &apos;+ $User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Owner Name</label>
    <type>Text</type>
</CustomField>