dynamix/force-app/main/default/objects/Payment__c/fields/Cheque__c.field-meta.xml
<CustomField>
    <fullName>Cheque__c</fullName>
    <label>Cheque</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>