dynamix/force-app/main/default/objects/Payment__c/fields/Cheque_Status__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Status__c</fullName>
    <label>Cheque Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Payment_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Wrong Entry</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>PDC</fullName>
                <isActive>false</isActive>
                <label>PDC</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>