dynamix/force-app/main/default/objects/Payment__c/fields/Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Note</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Credit_Note__c.Booking__c</field>
            <operation>equals</operation>
            <valueField>$Source.Booking__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Credit_Note__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>