dynamix/force-app/main/default/objects/Payment__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Cheque Date</label>
    <type>Date</type>
</CustomField>