dynamix/force-app/main/default/objects/Payment__c/fields/EOI_CA_Payment__c.field-meta.xml
<CustomField>
    <fullName>EOI_CA_Payment__c</fullName>
    <label>EOI/CA Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EOI</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>