dynamix/force-app/main/default/objects/Payment__c/fields/MahaRERA__c.field-meta.xml
<CustomField>
    <fullName>MahaRERA__c</fullName>
    <formula>Booking__r.Project_Name__r.RERA_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MahaRERA</label>
    <type>Text</type>
</CustomField>