dynamix/force-app/main/default/objects/Payment__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Payment</relationshipLabel>
    <relationshipName>Payment</relationshipName>
    <type>Lookup</type>
</CustomField>