dynamix/force-app/main/default/objects/Payment__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Mode of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>NEFT/ RTGS/ IMPS</fullName>
            </value>
            <value>
                <fullName>Credit/Debit Cards</fullName>
            </value>
            <value>
                <fullName>Credit Note</fullName>
            </value>
            <value>
                <fullName>SAP Credit Note</fullName>
            </value>
            <value>
                <fullName>Bank Disbursement</fullName>
                <isActive>false</isActive>
                <label>Bank Disbursement</label>
            </value>
            <value>
                <fullName>Debit Note</fullName>
                <isActive>false</isActive>
                <label>Debit Note</label>
            </value>
            <value>
                <fullName>Electronic NEFT/ RTGS</fullName>
                <isActive>false</isActive>
                <label>Electronic NEFT/ RTGS</label>
            </value>
            <value>
                <fullName>IMPS</fullName>
                <isActive>false</isActive>
                <label>IMPS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>