dynamix/force-app/main/default/objects/Payment__c/fields/Primary_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Primary_Applicant__c</fullName>
    <formula>IF( Booking__r.Primary_Applicant__r.FirstName &lt;&gt; null &amp;&amp; Booking__r.Primary_Applicant__r.FirstName &lt;&gt; &apos;&apos;,Booking__r.Primary_Applicant__r.FirstName+&apos; &apos;+Booking__r.Primary_Applicant__r.LastName , Booking__r.Primary_Applicant__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Applicant</label>
    <type>Text</type>
</CustomField>