dynamix/force-app/main/default/objects/Payment__c/fields/Project_Phone_Formulla__c.field-meta.xml
<CustomField>
    <fullName>Project_Phone_Formulla__c</fullName>
    <formula>Booking__r.Project_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Phone Formulla</label>
    <type>Text</type>
</CustomField>