dynamix/force-app/main/default/objects/Payment__c/fields/Reason_for_reject__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_reject__c</fullName>
    <inlineHelpText>Please add a reason for payment is rejection.</inlineHelpText>
    <label>Reason for reject</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Payment_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insufficient Funds</fullName>
            </value>
            <value>
                <fullName>POD</fullName>
            </value>
            <value>
                <fullName>Signature Mismatch</fullName>
            </value>
            <value>
                <fullName>Amount Mismatch</fullName>
            </value>
            <value>
                <fullName>Overwriting</fullName>
            </value>
            <value>
                <fullName>Payment stop by client</fullName>
            </value>
            <value>
                <fullName>Details Mismatch</fullName>
            </value>
            <value>
                <fullName>INSUFFICIENT FUND</fullName>
            </value>
            <value>
                <fullName>Amount in word and figure mismatch</fullName>
            </value>
            <value>
                <fullName>Stop Payment done by Allottee</fullName>
            </value>
            <value>
                <fullName>Contact Drawer</fullName>
            </value>
            <value>
                <fullName>Receipt entry not reflected in Bank Statement.</fullName>
            </value>
            <value>
                <fullName>Double entry done by CRM Team.</fullName>
            </value>
            <value>
                <fullName>Unit Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>