dynamix/force-app/main/default/objects/Payment__c/fields/Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Ref_No__c</fullName>
    <label>Ref. No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>