dynamix/force-app/main/default/objects/Payment__c/fields/Refund_Type__c.field-meta.xml
<CustomField>
    <fullName>Refund_Type__c</fullName>
    <label>Refund Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>