dynamix/force-app/main/default/objects/Payment__c/fields/Registation_Date__c.field-meta.xml
<CustomField>
    <fullName>Registation_Date__c</fullName>
    <formula>Booking__r.Registration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registation Date</label>
    <type>Date</type>
</CustomField>