dynamix/force-app/main/default/objects/Payment__c/fields/SAP_Approved_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>SAP_Approved_Rejected_Date__c</fullName>
    <label>SAP Approved/Rejected Date</label>
    <type>Date</type>
</CustomField>