dynamix/force-app/main/default/objects/Payment__c/fields/Sap_code__c.field-meta.xml
<CustomField>
    <fullName>Sap_code__c</fullName>
    <label>Sap code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>