dynamix/force-app/main/default/objects/Payment__c/fields/Termination_Notice_dated__c.field-meta.xml
<CustomField>
    <fullName>Termination_Notice_dated__c</fullName>
    <formula>Booking__r.Cancel_or_Termination_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Termination Notice dated</label>
    <type>Date</type>
</CustomField>