dynamix/force-app/main/default/objects/Payment__c/fields/Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number__c</fullName>
    <formula>Booking__r.Related_Suggested_Property__r.Unit__r.Name</formula>
    <label>Unit Number</label>
    <type>Text</type>
</CustomField>