dynamix/force-app/main/default/objects/Payment__c/validationRules/If_cheque_option_is_selected_add_bank.validationRule-meta.xml
<ValidationRule>
    <fullName>If_cheque_option_is_selected_add_bank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Payment_Type__c,&apos;Cheque&apos;),ISBLANK(BankName__c))</errorConditionFormula>
    <errorDisplayField>Bank_Name__c</errorDisplayField>
    <errorMessage>Please enter Bank Name for Cheque Payment type</errorMessage>
</ValidationRule>