dynamix/force-app/main/default/objects/Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Payment_Date__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Unit_Number__c</columns>
    <columns>Primary_Applicant__c</columns>
    <columns>Payment_Category__c</columns>
    <columns>Amount__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Cheque_Transaction_Number__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Name__c</field>
        <operation>equals</operation>
        <value>Parkwoods D6</value>
    </filters>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>Payment_Type__c</field>
        <operation>contains</operation>
        <value>Cheque,NEFT/ RTGS/ IMPS,Credit/Debit Cards</value>
    </filters>
    <filters>
        <field>Payment_Category__c</field>
        <operation>notContain</operation>
        <value>TDS</value>
    </filters>
    <label>All</label>
</ListView>