dynamix/force-app/main/default/objects/Payment__c/listViews/Payment_Astrum.listView-meta.xml
<ListView>
    <fullName>Payment_Astrum</fullName>
    <columns>NAME</columns>
    <columns>BankName__c</columns>
    <columns>Amount__c</columns>
    <columns>Booking__c</columns>
    <columns>Cheque__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Payment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Name__c</field>
        <operation>equals</operation>
        <value>Astrum</value>
    </filters>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Payment Astrum</label>
</ListView>